--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "start-storybook -p 6006 -s docs",
+    "build-storybook": "build-storybook -s docs"
   },
   "eslintConfig": {
     "extends": [
