--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -2,7 +2,7 @@ name: Publish stories if changed
 
 on:
   push:
-    paths: ["stories/**", "src/components/**"]
+    paths: ["**/stories/**", "src/components/**"]
 
 jobs:
   build-and-deploy:
