--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -11,13 +11,15 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
 
-      - name: Install and Build 🔧 
+      - name: Install and Build 🔧
+        if: github.ref == 'refs/heads/main'
         run: |
           npm install
-          npm run build-storybook
+          npm run deploy-storyboo
 
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.4
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: docs # The folder the action should
+      # - name: Deploy 🚀
+      #   if: github.ref == 'refs/heads/main'
+      #   uses: JamesIves/github-pages-deploy-action@4.1.4
+      #   with:
+      #     branch: gh-pages # The branch the action should deploy to.
+      #     folder: docs # The folder the action should
