--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -15,7 +15,9 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           npm install
-          npm run deploy-storybook
+          npm run deploy-storybook -- --ci
+        env:
+          GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
 
       # - name: Deploy 🚀
       #   if: github.ref == 'refs/heads/main'
