--- a/.github/workflows/storybook.yaml
+++ b/.github/workflows/storybook.yaml
@@ -15,7 +15,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           npm install
-          npm run deploy-storybook -- --ci
+          npm run deploy-storybook -- --ci --source-branch=main
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
 
